FIX: URLRepository does not allow some valid file scheme uri's (IVY-884)
git-svn-id: https://svn.apache.org/repos/asf/ant/ivy/core/trunk@687492 13f79535-47bb-0310-9956-ffa450edef68